[package]
name = "vuln-file-server"
authors = ["Reverier-Xu"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
serde = {version = "1.0", features = ["derive"]}